test/Fail/Issue4768.err
Issue4768.agda:10.6-13: error: [SplitOnPartial]
Splitting on partial elements is only allowed at the type Partial, but the domain here is
  IsOne i
when checking that the pattern (i0 = i1) has type IsOne i
